{
  "version": 4,
  "terraform_version": "0.13.1",
  "serial": 13,
  "lineage": "a2063a89-5fc2-5936-99c2-d3e094cf122f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "task_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-00712248eb929db36",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-65-0-48-220.ap-south-1.compute.amazonaws.com",
            "public_ip": "65.0.48.220",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "task4_wp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-000cbce3e1b899ebd",
            "arn": "arn:aws:ec2:ap-south-1:718224040219:instance/i-019358668ca109337",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-019358668ca109337",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c10b6a9ba34718fb",
            "private_dns": "ip-10-0-1-69.ap-south-1.compute.internal",
            "private_ip": "10.0.1.69",
            "public_dns": "ec2-13-126-127-133.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.126.127.133",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09442cd11d0e5861b",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04c1f03eebc01f2e3",
            "tags": {
              "Name": "task4_wp"
            },
            "tags_all": {
              "Name": "task4_wp"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0eb4eb4e28a6856a1"
            ]
          },
          "dependencies": [
            "aws_security_group.securitygroup2",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc_task"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw_task",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:718224040219:internet-gateway/igw-0cdabbd82f58420b8",
            "id": "igw-0cdabbd82f58420b8",
            "owner_id": "718224040219",
            "tags": {
              "Name": "gw_task"
            },
            "tags_all": {
              "Name": "gw_task"
            },
            "vpc_id": "vpc-0924ba98f62c434d7"
          },
          "dependencies": [
            "aws_vpc.vpc_task"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_task",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00712248eb929db36",
            "id": "nat-06e1fbe0c0398f18f",
            "network_interface_id": "eni-092fdebb5fd067d3f",
            "private_ip": "10.0.1.238",
            "public_ip": "65.0.48.220",
            "subnet_id": "subnet-04c1f03eebc01f2e3",
            "tags": {
              "Name": "nat_task"
            },
            "tags_all": {
              "Name": "nat_task"
            }
          },
          "dependencies": [
            "aws_eip.task_eip",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc_task"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_task",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:718224040219:route-table/rtb-08276beeeb3077c62",
            "id": "rtb-08276beeeb3077c62",
            "owner_id": "718224040219",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0cdabbd82f58420b8",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "route_task"
            },
            "tags_all": {
              "Name": "route_task"
            },
            "vpc_id": "vpc-0924ba98f62c434d7"
          },
          "dependencies": [
            "aws_internet_gateway.gw_task",
            "aws_vpc.vpc_task"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_task_sec",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:718224040219:route-table/rtb-05b3baa6583355a0f",
            "id": "rtb-05b3baa6583355a0f",
            "owner_id": "718224040219",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-06e1fbe0c0398f18f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "route_task_sec"
            },
            "tags_all": {
              "Name": "route_task_sec"
            },
            "vpc_id": "vpc-0924ba98f62c434d7"
          },
          "dependencies": [
            "aws_eip.task_eip",
            "aws_nat_gateway.nat_task",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc_task"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "asso_task",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0229bc903f6b5b84d",
            "route_table_id": "rtb-08276beeeb3077c62",
            "subnet_id": "subnet-04c1f03eebc01f2e3"
          },
          "dependencies": [
            "aws_internet_gateway.gw_task",
            "aws_route_table.route_task",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc_task"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "securitygroup2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:718224040219:security-group/sg-0eb4eb4e28a6856a1",
            "description": "Allow HTTP and SSH and NFS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0eb4eb4e28a6856a1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "NFS",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2049
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "securitygroup2",
            "name_prefix": "",
            "owner_id": "718224040219",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "securitygroup2"
            },
            "tags_all": {
              "Name": "securitygroup2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0924ba98f62c434d7"
          },
          "dependencies": [
            "aws_vpc.vpc_task"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:718224040219:subnet/subnet-04c1f03eebc01f2e3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-04c1f03eebc01f2e3",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "718224040219",
            "tags": {
              "Name": "public_subnet"
            },
            "tags_all": {
              "Name": "public_subnet"
            },
            "vpc_id": "vpc-0924ba98f62c434d7"
          },
          "dependencies": [
            "aws_vpc.vpc_task"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_task",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:718224040219:vpc/vpc-0924ba98f62c434d7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-083b7984ff38dc2e9",
            "default_route_table_id": "rtb-0836f011c27aac265",
            "default_security_group_id": "sg-032009da2a7e1da2c",
            "dhcp_options_id": "dopt-4f49b124",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0924ba98f62c434d7",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0836f011c27aac265",
            "owner_id": "718224040219",
            "tags": {
              "Name": "vpc_task"
            },
            "tags_all": {
              "Name": "vpc_task"
            }
          }
        }
      ]
    }
  ]
}